// Vitest Snapshot v1

exports[`CardGrid > hoverable work 1`] = `
"<div class=\\"ix-card ix-card-has-shadow ix-card-has-grid ix-card-sm\\">
  <!---->
  <!---->
  <div class=\\"ix-card-body\\">
    <div class=\\"ix-row\\">
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
    </div>
  </div>
  <!---->
  <!---->
</div>"
`;

exports[`CardGrid > hoverable2 work 1`] = `
"<div class=\\"ix-card ix-card-has-shadow ix-card-has-grid ix-card-sm\\">
  <!---->
  <!---->
  <div class=\\"ix-card-body\\">
    <div class=\\"ix-row\\">
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
      <div class=\\"ix-col ix-card-grid ix-card-grid-hoverable\\">Content</div>
    </div>
  </div>
  <!---->
  <!---->
</div>"
`;

exports[`CardGrid > render work 1`] = `
"<div class=\\"ix-card ix-card-has-shadow ix-card-has-grid ix-card-sm\\">
  <!---->
  <!---->
  <div class=\\"ix-card-body\\">
    <div class=\\"ix-row\\">
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
      <div class=\\"ix-col ix-card-grid\\">Content</div>
    </div>
  </div>
  <!---->
  <!---->
</div>"
`;
